examples/errors/private_member_multiline_error.flx
module Math {
  fun _secret() { 1; }
}

module Main {
  fun main() {
    Math
      ._secret();
  }
}
